// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    buttons={
      Array [
        Object {
          "href": "http://occ.com.mx",
          "id": "item1",
          "label": "Item 1",
        },
      ]
    }
    classes={
      Object {
        "@media (max-width: 991px)": "@media (max-width: 991px)",
        "dropdownElement": "dropdownElement",
        "dropdownLink": "dropdownLink",
        "dropdownMenu": "dropdownMenu",
        "footer": "footer",
        "footerList": "footerList",
        "link": "link",
        "listElement": "listElement",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ul
        className="footerList"
      >
        <li
          className="listElement"
        >
          <a
            className="link"
            href="http://occ.com.mx"
            id="item1"
            onClick={undefined}
            target={undefined}
          >
            Item 1
          </a>
        </li>
      </ul>,
      "className": "footer",
      "fluid": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="listElement"
          >
            <a
              className="link"
              href="http://occ.com.mx"
              id="item1"
              onClick={undefined}
              target={undefined}
            >
              Item 1
            </a>
          </li>,
        ],
        "className": "footerList",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "item1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="link"
                href="http://occ.com.mx"
                id="item1"
                onClick={undefined}
                target={undefined}
              >
                Item 1
              </a>,
              undefined,
            ],
            "className": "listElement",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Item 1",
                "className": "link",
                "href": "http://occ.com.mx",
                "id": "item1",
                "onClick": undefined,
                "target": undefined,
              },
              "ref": null,
              "rendered": "Item 1",
              "type": "a",
            },
            undefined,
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ul
          className="footerList"
        >
          <li
            className="listElement"
          >
            <a
              className="link"
              href="http://occ.com.mx"
              id="item1"
              onClick={undefined}
              target={undefined}
            >
              Item 1
            </a>
          </li>
        </ul>,
        "className": "footer",
        "fluid": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="listElement"
            >
              <a
                className="link"
                href="http://occ.com.mx"
                id="item1"
                onClick={undefined}
                target={undefined}
              >
                Item 1
              </a>
            </li>,
          ],
          "className": "footerList",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "item1",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  className="link"
                  href="http://occ.com.mx"
                  id="item1"
                  onClick={undefined}
                  target={undefined}
                >
                  Item 1
                </a>,
                undefined,
              ],
              "className": "listElement",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Item 1",
                  "className": "link",
                  "href": "http://occ.com.mx",
                  "id": "item1",
                  "onClick": undefined,
                  "target": undefined,
                },
                "ref": null,
                "rendered": "Item 1",
                "type": "a",
              },
              undefined,
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Footer styles matches the snapshot 1`] = `
Object {
  "@media (max-width: 991px)": Object {
    "footer": Object {
      "display": "none !important",
    },
  },
  "dropdownElement": Object {
    "float": "left",
    "listStyle": "none",
  },
  "dropdownLink": Object {
    "&:hover": Object {
      "color": "#ffffff",
      "textDecoration": "none",
    },
    "color": "#cdcdcd",
    "display": "block",
    "lineHeight": "1.42857143",
    "padding": "3px 18px",
    "textDecoration": "none",
  },
  "dropdownMenu": Object {
    "background": "#242424",
    "borderRadius": "4px",
    "bottom": "calc(100% + 10px)",
    "boxShadow": "0 6px 12px rgba(0,0,0,.175)",
    "display": "none",
    "fontSize": "12px",
    "left": "50%",
    "listStyle": "none",
    "minWidth": "160px",
    "padding": "5px 0",
    "position": "absolute",
    "textAlign": "left",
    "transform": "translateX(-50%)",
    "zIndex": "2",
  },
  "footer": Object {
    "backgroundColor": "#242424",
    "color": "#cdcdcd",
    "fontFamily": "'Nunito Sans', sans-serif",
    "fontSize": "12px",
    "height": "25px",
    "margin": "0",
    "padding": "0 40px",
  },
  "footerList": Object {
    "listStyle": "none",
    "margin": "0",
    "padding": "4px 0 0 0",
    "width": "auto",
  },
  "link": Object {
    "&:hover": Object {
      "color": "#ffffff",
      "textDecoration": "none",
    },
    "color": "#cdcdcd",
    "cursor": "pointer",
    "textDecoration": "none",
  },
  "listElement": Object {
    "float": "left",
    "listStyle": "none",
    "margin": "0 50px 0 0",
    "padding": "0",
    "position": "relative",
  },
}
`;

exports[`FooterJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Footer)
    buttons={
      Array [
        Object {
          "href": "http://occ.com.mx",
          "id": "item1",
          "label": "Item 1",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "buttons": Array [
        Object {
          "href": "http://occ.com.mx",
          "id": "item1",
          "label": "Item 1",
        },
      ],
      "classes": Object {
        "dropdownElement": "Footer-dropdownElement-0-1-6",
        "dropdownLink": "Footer-dropdownLink-0-1-7",
        "dropdownMenu": "Footer-dropdownMenu-0-1-5",
        "footer": "Footer-footer-0-1-1",
        "footerList": "Footer-footerList-0-1-2",
        "link": "Footer-link-0-1-4",
        "listElement": "Footer-listElement-0-1-3",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "buttons": Array [
          Object {
            "href": "http://occ.com.mx",
            "id": "item1",
            "label": "Item 1",
          },
        ],
        "classes": Object {
          "dropdownElement": "Footer-dropdownElement-0-1-6",
          "dropdownLink": "Footer-dropdownLink-0-1-7",
          "dropdownMenu": "Footer-dropdownMenu-0-1-5",
          "footer": "Footer-footer-0-1-1",
          "footerList": "Footer-footerList-0-1-2",
          "link": "Footer-link-0-1-4",
          "listElement": "Footer-listElement-0-1-3",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
